add a simple VAE notebook first

--- a/Tutorials/CNN_VAE_example.ipynb
+++ b/Tutorials/CNN_VAE_example.ipynb
@@ -5,7 +5,7 @@
    "id": "c01bf406-75b7-4d8a-aae4-1d44af1798d2",
    "metadata": {},
    "source": [
-    "**This notebook introduces how to train a conditional VAE model from scratch. <br/>**\n",
+    "**This notebook introduces how to train a conditional, convolutional VAE model from scratch. <br/>**\n",
     "We first use an encoder to compress the high-dimensional temperature data into latent vectors. Then, we incorporate CO2 & CH4 information into latent vectors, and use an decorder to reconstruct the global temperature map.\n",
     "\n",
     "By Weiwei Zhan\n",
