--- a/Tutorials/Diffusion_example.ipynb
+++ b/Tutorials/Diffusion_example.ipynb
@@ -7,12 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install diffusers"
+    "# !pip install diffusers\n",
+    "# then restart kernel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ece29f69-3471-419a-859d-585ad7f835ec",
    "metadata": {},
    "outputs": [],
