--- a/Tutorials/GP_example.ipynb
+++ b/Tutorials/GP_example.ipynb
@@ -35,6 +35,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ba700ce-8955-4e26-9d46-91c494aa84eb",
+   "metadata": {},
+   "source": [
+    "# Gaussian process model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "166de3e0-26db-4f65-b30f-dea5abe60d16",
@@ -92,6 +100,18 @@
     "cwd = os.getcwd()\n",
     "train_path = \"gs://leap-persistent/jbusecke/data/climatebench/train_val/\"\n",
     "test_path = \"gs://leap-persistent/jbusecke/data/climatebench/test/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "228d0a02-10b9-40ac-8ae6-a8523366e643",
+   "metadata": {},
+   "source": [
+    "## data preprocssing\n",
+    "\n",
+    "prepare data for training & test sets\n",
+    "\n",
+    "import data as training & test sets"
    ]
   },
   {
@@ -177,6 +197,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af0cd178-d843-4e56-ba73-b08b6c3d917c",
+   "metadata": {},
+   "source": [
+    "## Select relevant variables\n",
+    "\n",
+    "predictors: CO2, CH4, lat & lon\n",
+    "\n",
+    "predictand: tas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "e28f8a6c-1700-4709-b4f1-a466288781c0",
@@ -207,6 +239,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e78e455-9bf5-4352-9771-e7a7640df71a",
+   "metadata": {},
+   "source": [
+    "## Data standardization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "aafaa5d4-6c63-4c52-a5f7-099ab12b9131",
@@ -227,6 +267,14 @@
     "y_train = (y_train - train_tas_mean) / train_tas_std\n",
     "\n",
     "print(X_train.shape, y_train.shape, X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30c0ae94-b1a1-4549-8239-1f056be52b98",
+   "metadata": {},
+   "source": [
+    "## Build & train the Gaussian process model"
    ]
   },
   {
